k_up_run/cap_8/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
spec:
  rules:
    - host: alpaca.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: alpaca-prod
                port:
                  number: 8080
    - host: bandicoot.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bandcoot-prod
                port:
                  number: 8080
    - host: be-default.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: be-default
                port:
                  number: 8080
