k_up_run/cap_8/simple_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-default-ingress
spec:
  defaultBackend:
    service:
      name: be-default-prod
      port: 
        number: 8080
