k_up_run/cap_8/tls-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: tls-ingress
spec: 
  tls:
    - hosts:
      - alpaca.example.com
      secretName: tls-secret-name
  rules:
    - host: alpaca.example.com
      http:
        paths:
          - backend:
              serviceName: alpaca
              servicePort: 8080
